name:                influxdb-client
version:             0.1.2.0
license:             BSD3
license-file:        LICENSE
author:              Joshua Montgomery
maintainer:          josh1s4live@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded

  default-extensions:
    OverloadedStrings

  exposed-modules:
    Database.InfluxDb
    Database.InfluxDb.Query
    Database.InfluxDb.Repl
    Database.InfluxDb.Types

  build-depends:
    aeson                   >= 1.0  && < 1.1,
    attoparsec              >= 0.13 && < 0.14,
    base                    >= 4.8  && < 4.9,
    blaze-builder           >= 0.4  && < 0.5,
    bytestring              >= 0.10 && < 0.11,
    bytestring-show         >= 0.3  && < 0.4,
    cereal                  >= 0.5  && < 0.6,
    conduit                 >= 1.2  && < 1.3,
    conduit-extra           >= 1.1  && < 1.2,
    containers              >= 0.5  && < 0.6,
    exceptions              >= 0.8  && < 0.9,
    http-conduit            >= 2.1  && < 2.5,
    http-types              >= 0.8  && < 0.10,
    lifted-base             >= 0.2  && < 0.3,
    monad-control           >= 1.0  && < 1.1,
    mmorph                  >= 1.0  && < 1.1,
    resourcet               >= 1.1  && < 1.2,
    scientific              >= 0.3  && < 0.4,
    text                    >= 1.2  && < 1.3,
    text-show               >= 3.0  && < 4.0,
    transformers            >= 0.4  && < 0.6,
    transformers-base       >= 0.4  && < 0.6,
    unordered-containers    >= 0.2  && < 0.3,
    vector                  >= 0.11 && < 0.12
